--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "element-plus": "^2.3.5",
     "string-width": "^4.2.0",
     "vue": "^3.2.47",
