--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "element-plus": "^2.3.5",
     "string-width": "^4.2.0",
     "vue": "^3.2.47",
